# bacon-exercises

./: README.md  index.html  package-lock.json  package.json  style.css
.github/workflows/: main.yml
answers/rust/: README.md
answers/rust/compose/: Cargo.toml  build.sh  compose.wasm
answers/rust/compose/src/: main.rs
answers/rust/hello/: Cargo.toml  README.md
answers/rust/hello-name/: Cargo.toml  README.md
answers/rust/hello-name/src/: main.rs
answers/rust/hello-name/wit/: world.wit
answers/rust/hello-structured/: Cargo.toml  README.md
answers/rust/hello-structured/src/: lib.rs
answers/rust/hello-structured/wit/: world.wit
answers/rust/hello/src/: main.rs
answers/rust/intercept-imports/: .gitignore  Cargo.toml  README.md  build.sh
answers/rust/intercept-imports/src/: lib.rs
answers/rust/intercept-imports/wit/: world.wit
exercises/compose/: Cargo.toml  build.sh  compose.wasm
exercises/compose/src/: lib.rs
exercises/compose/wit/: world.wit
exercises/intercept-imports/: Cargo.toml  build.sh  intercept-imports.wasm
exercises/intercept-imports/src/: lib.rs
exercises/intercept-imports/wit/: world.wit
src/: greeter-candidates.js  index.js  random-shim.js  shims.js  wasi-io.js  who-to-greet.js
