[package]
name = "intercept-imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
obfstr = "0.4.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:intercept-imports"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:cli" = "0.2.0-rc"

[package.metadata.component.dependencies]

[package.metadata.component.registries]
default = "https://preview-registry.bytecodealliance.org/"
