[package]
name = "hello-structured"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:hello-structured"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[package.metadata.component.registries]
default = "https://preview-registry.bytecodealliance.org/"
