[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:hello"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
